3000-01-01  Nobody  <nobody@secretchronicles.de>

	* Version unreleased.
	* Feature: Allow selection of music and background files in the
		level settings editor via dropdowns (#14 by Justin Rissler)
	* Feature: Added "uninstall" target to build system (#391 by Danfun64)
	* Feature: Added script std/giant_jewel_box
	* Feature: Added sound "furry_death'"by Nearbu
	* Feature: Added music "medieval_1" ("Beautiful World") by Naerbu
	* Feature: Added music "snow_2" ("Snowy Mountain") by Naerbu
	* Feature: Added music "castle_1" ("Morning in a castle") by Naerbu
	* Feature: Added music "blossem" by Arik Burns
	* Feature: Added music "lost" by Arik Burns
	* Feature: Added music "battle" by Ryan Gonzalez (#449 by Chris Jacobsen)
	* Feature: Added music "theme_1" ("Blinded by Desire") by Ryan Gonzalez
	* Feature: Added level graphic "Rainbows" by Marvin Gülker
	* Feature: Added world graphic "volcano" by David F. Fernández
	* Feature: Added world graphic "swamp" by David F. Fernández
	* Feature: Added world graphics "Dunes" by David F. Fernández
	* Feature: Added world graphics "Mountains" by David F. Fernández
	* Feature: Added world graphics "Blue hills" by David F. Fernández
	* Feature: Added world graphics "Clouds" by David F. Fernández
	* Feature: Replace world way graphics (graphics by David F. Fernández)
	* Feature: Added Doom Larry enemy and Larry graphics improvements
		(#79 by Marvin Gülker, PR #460 by Chris Jacobsen, graphics
		by Bugsbane)
	* Feature: "^" block replaced by original TSC art (#248 by Marvin
		Gülker, graphics by Bugsbane)
	* Feature: Make Alex M-less (#264 by Marvin Gülker, graphics by Bugsbane)
	* Feature: Replace vines with ladders as original TSC art (#333 by
		Chris Jacobsen, graphics by Bugsbane)
	* Feature: Original TSC art for switches (#337 by Chris Jacobsen,
		graphics by Bugsbane and JohnTheTreeman)
	* Feature: Added a working `PKGBUILD' file for ArchLinux.
	* Feature: New obejct editing panel in editor