@@ -457,6 +457,10 @@ bool cEditor::Key_Down(const sf::Event& evt)
                                       "F11 - Toggle music play\n"
                                       "Home - Focus level start\n"
                                       "End - Focus last level exit\n"
+                                      "PageUp - Move camera to left level edge\n"
+                                      "PageDown - Move camera to right level edge\n"
+                                      "Shift + PageUp - Move camera to top level edge\n"
+                                      "Shift + PageDown - Move camera to bottom level edge\n"
                                       "Ctrl + G - Goto Camera position\n"
                                       "L - In world editor: toggle walk line visibility\n"
                                       "N - Step one screen to the right ( Next Screen )\n"
